<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/upcoming_raw_footer_back"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivCloseSideMenu"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/close_icon_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvClientNameForProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Client name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/nav_client_name_text_size" />

                <TextView
                    android:id="@+id/tvUserProfileUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvClientNameForProfile"
                    android:text="@string/side_menu_account_setting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/user_name_text" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivClientProfileImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|right"
                android:layout_marginRight="30dp"
                android:foregroundGravity="center_vertical"
                android:src="@drawable/placeholder_img" />
        </LinearLayout>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tvDashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/drawer_dashboard"
                android:textColor="@color/black"
                android:textSize="@dimen/menu_text_size" />

            <TextView
                android:id="@+id/tvUpcomingSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/drawer_upcoming_schedual"
                android:textColor="@color/black"
                android:textSize="@dimen/menu_text_size" />

            <!--<TextView-->
                <!--android:id="@+id/tvUnSubmittedUnits"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingBottom="10dp"-->
                <!--android:paddingLeft="20dp"-->
                <!--android:paddingTop="10dp"-->
                <!--android:text="@string/drawer_unsubmitted_units"-->
                <!--android:textColor="@color/black"-->
                <!--android:textSize="@dimen/menu_text_size" />-->

            <TextView
                android:id="@+id/tvRequestForServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/drawer_request_service"
                android:textColor="@color/black"
                android:textSize="@dimen/menu_text_size" />

            <TextView
                android:id="@+id/tvPastServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/drawer_past_services"
                android:textColor="@color/black"
                android:textSize="@dimen/menu_text_size" />

            <TextView
                android:id="@+id/tvMyUnits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/drawer_my_units"
                android:textColor="@color/black"
                android:textSize="@dimen/menu_text_size" />


            <TextView
                android:id="@+id/tvPlanCoverage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/drawer_plan_coverage"
                android:textColor="@color/black"
                android:textSize="@dimen/menu_text_size" />


            <TextView
                android:id="@+id/tvAboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/drawer_about_us"
                android:textColor="@color/black"
                android:textSize="@dimen/menu_text_size" />

            <TextView
                android:id="@+id/tvContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/drawer_contact_us"
                android:textColor="@color/black"
                android:textSize="@dimen/menu_text_size" />

            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/drawer_terms"
                android:textColor="@color/black"
                android:textSize="@dimen/menu_text_size" />

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/drawer_logout"
                android:textColor="@color/black"
                android:textSize="@dimen/menu_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/drawer_version"
                android:textColor="@color/black"
                android:textSize="@dimen/margin_top" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
