<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/change_username_dialog_title"
            android:gravity="left|center_vertical"
            android:textColor="@color/text_light_blue_color"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/upcoming_raw_footer_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <com.aircall.app.TextFonts.TextViewOpenSansRagularFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_username_firstname"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:textSize="@dimen/forgot_password_text"/>
            <EditText
                android:id="@+id/etUpdateFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_border_background"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/edit_text_border_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <com.aircall.app.TextFonts.TextViewOpenSansRagularFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_username_lastname"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:textSize="@dimen/forgot_password_text"/>
            <EditText
                android:id="@+id/etUpdateLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_border_background"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/edit_text_border_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <com.aircall.app.TextFonts.TextViewOpenSansRagularFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_companyname"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:textSize="@dimen/forgot_password_text"/>
            <EditText
                android:id="@+id/etUpdateCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_border_background"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/edit_text_border_text"/>
        </LinearLayout>

        <com.aircall.app.TextFonts.TextViewOpenSansRagularFont
            android:id="@+id/tvSubmitUpdateUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:paddingTop="@dimen/header_padding_top"
            android:paddingBottom="@dimen/header_padding_bottom"
            android:inputType="textCapSentences"
            android:textSize="@dimen/header_text_size"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/text_light_blue_color"
            android:text="@string/change_username_done"/>

        <com.aircall.app.TextFonts.TextViewOpenSansRagularFont
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="@dimen/header_padding_top"
            android:paddingBottom="@dimen/header_padding_bottom"
            android:inputType="textCapSentences"
            android:textSize="@dimen/header_text_size"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/summary_add_another_unit"
            android:text="@string/schedule_detail_cancel"/>

    </LinearLayout>
</LinearLayout>