<FrameLayout
    android:id="@+id/flMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.aircall.app.Fragment.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:background="@color/header">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:padding="@dimen/back_arrow_padding"
                android:src="@drawable/arrow"/>
            <com.aircall.app.TextFonts.TextViewOpenSansBoldFont
                android:id="@+id/tvHeaderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/change_password_title"
                android:textColor="@color/white"
                android:textSize="@dimen/common_header_text_size"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_left"
                    android:paddingRight="@dimen/padding_right">
                    <com.aircall.app.TextFonts.TextViewOpenSansRagularFont
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/change_password_old_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/menu_text_size"/>
                    <EditText
                        android:id="@+id/etOldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edit_text_border_background"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:singleLine="true"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_left"
                    android:paddingRight="@dimen/padding_right">
                    <com.aircall.app.TextFonts.TextViewOpenSansRagularFont
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/change_password_new_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/menu_text_size"/>
                    <EditText
                        android:id="@+id/etNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edit_text_border_background"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:singleLine="true"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_left"
                    android:paddingRight="@dimen/padding_right">
                    <com.aircall.app.TextFonts.TextViewOpenSansRagularFont
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/change_password_retype_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/menu_text_size"/>
                    <EditText
                        android:id="@+id/etReTypePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edit_text_border_background"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:singleLine="true"/>
                </LinearLayout>

                <com.aircall.app.TextFonts.TextViewOpenSansRagularFont
                    android:id="@+id/tvChangePasswordReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:layout_marginTop="30dp"
                    android:background="@color/text_light_blue_color"
                    android:gravity="center"
                    android:inputType="textCapSentences"
                    android:paddingBottom="@dimen/header_padding_bottom"
                    android:paddingTop="@dimen/header_padding_top"
                    android:text="@string/change_password_reset"
                    android:textColor="@color/white"
                    android:textSize="@dimen/header_text_size"/>

                <com.aircall.app.TextFonts.TextViewOpenSansRagularFont
                    android:id="@+id/tvChangePasswordCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:layout_marginTop="20dp"
                    android:background="@color/summary_add_another_unit"
                    android:gravity="center"
                    android:inputType="textCapSentences"
                    android:paddingBottom="@dimen/header_padding_bottom"
                    android:paddingTop="@dimen/header_padding_top"
                    android:text="@string/change_password_cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/header_text_size"/>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</FrameLayout>
